Added Create operation for api

--- a/CRUD-OOP.MVC/Views/Author/Create.cshtml
+++ b/CRUD-OOP.MVC/Views/Author/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model CRUD_OOP.MVC.ViewModels.AuthorViewModel
+﻿@model CRUD_OOP.SharedKernel.ViewModels.AuthorViewModel
 
 @{
     ViewData["Title"] = "Create";
